syntax = "proto3";

package com.andrew.rental;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

enum Role {
  OWNER = 0;
  CLIENT = 1;
}

message GetRequest {
  string id = 1;
}

message DeleteRequest {
  string id = 1;
}

message AllRequest {
}

message AddUserRequest {
  string name = 1;
  string surname = 2;
  string email = 3;
  string login = 4;
  string password_hash = 5;
  Role role = 6;
}

message UsersShort {
  string id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string login = 5;
  string password_hash = 6;
  google.protobuf.Timestamp created_at = 7;
  Role role = 8;
}

message AllResponse {
  repeated UsersShort users = 1;
}

message AddResponse {
  string id = 1;
}

message DeleteResponse {
}


service UserService {
  rpc all(AllRequest) returns (AllResponse);
  rpc add(AddUserRequest) returns (AddResponse);
  rpc shortGet(GetRequest) returns (UsersShort);
  rpc delete(DeleteRequest) returns (DeleteResponse);
}
